--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^1.13.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "sequelize": "^6.8.0",
+    "wx-server-sdk": "^3.0.1",
     "xml2js": "^0.6.2"
   },
   "engines": {
