--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@coze/api": "^1.3.9",
     "axios": "^1.13.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
